2014-06-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.35 released.

2014-06-22  Carl Hetherington  <cth@carlh.net>

	* Fix large memory leak with image sources.

2014-06-21  Carl Hetherington  <cth@carlh.net>

	* Move email config into the KDM email page.

	* Version 1.69.34 released.

2014-06-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.33 released.

2014-06-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.32 released.

2014-06-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.31 released.

2014-06-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.30 released.

2014-06-20  Carl Hetherington  <cth@carlh.net>

	* Updates to de_DE translation from Carsten Kurz.

2014-06-18  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.29 released.

2014-06-18  Carl Hetherington  <cth@carlh.net>

	* Fix thinko causing incorrect audio sample rates in some cases.

2014-06-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.28 released.

2014-06-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.27 released.

2014-06-12  Carl Hetherington  <cth@carlh.net>

	* Add Content menu with "scale to fit width" and "scale
	to fit height" options.

	* Version 1.69.26 released.

2014-06-12  Carl Hetherington  <cth@carlh.net>

	* Fix bug where DCP-o-matic does not recreate video after
	subtitles are turned on or off.

2014-06-10  Carl Hetherington  <cth@carlh.net>

	* Support ISDCF naming convention version 9 (#257).

	* Rename DCI to ISDCF when talking about the digital cinema
	naming convention (#362).

	* Fix crash when opening the timeline with no content (#369).

2014-06-09  Carl Hetherington  <cth@carlh.net>

	* Fix server/client with non-RGB24 sources.

	* Version 1.69.25 released.

2014-06-09  Carl Hetherington  <cth@carlh.net>

	* Make audio gain a floating-point value in the UI (#367).

	* Work-around out-of-memory crashes with large start trims (#252).

	* Version 1.69.24 released.

2014-06-06  Carl Hetherington  <cth@carlh.net>
