@@ -67,9 +67,6 @@ Config::Config ()
 	, _default_dcp_content_type (DCPContentType::from_isdcf_name ("TST"))
 	, _default_j2k_bandwidth (100000000)
 	, _default_audio_delay (0)
-	, _kdm_email (
-		_("Dear Projectionist\n\nPlease find attached KDMs for $CPL_NAME.\n\nThe KDMs are valid from $START_TIME until $END_TIME.\n\nBest regards,\nDCP-o-matic")
-		)
 	, _check_for_updates (false)
 	, _check_for_test_updates (false)
 	, _maximum_j2k_bandwidth (250000000)
@@ -85,6 +82,8 @@ Config::Config ()
 	_colour_conversions.push_back (PresetColourConversion (_("sRGB"), 2.4, true, libdcp::colour_matrix::srgb_to_xyz, 2.6));
 	_colour_conversions.push_back (PresetColourConversion (_("sRGB non-linearised"), 2.4, false, libdcp::colour_matrix::srgb_to_xyz, 2.6));
 	_colour_conversions.push_back (PresetColourConversion (_("Rec. 709"), 2.2, false, libdcp::colour_matrix::rec709_to_xyz, 2.6));
+
+	reset_kdm_email ();
 }
 
 void
@@ -407,4 +406,15 @@ Config::changed ()
 {
 	write ();
 	Changed ();
+}
+
+void
+Config::reset_kdm_email ()
+{
+	_kdm_email = _(
+		"Dear Projectionist\n\n"
+		"Please find attached KDMs for $CPL_NAME.\n\n"
+		"The KDMs are valid from $START_TIME until $END_TIME.\n\n"
+		"Best regards,\nDCP-o-matic"
+		);
 }
