@@ -1,5 +1,7 @@
 2014-06-22  Carl Hetherington  <cth@carlh.net>
 
+	* Reset-to-default button for KDM email text.
+
 	* Version 1.69.35 released.
 
 2014-06-22  Carl Hetherington  <cth@carlh.net>
